Initialize m_dpiAdjustmentPolicy from correct env

Commit 4d1f13f354 accidentally changed the code to read
envScaleFactorRoundingPolicy instead of envDpiAdjustmentPolicy.

Fixes: QTBUG-97443
Change-Id: I26f519fd8829860af26fa8439df9bbf15cd7352f
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 2e73ff10797b9b069cf7abd8c353ad60bd6a088a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>